--- a/detail.html
+++ b/detail.html
@@ -243,7 +243,7 @@
 
                 <div id="product-carousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-item active">
-                            <img class="w-100 h-100" src="img/product-1.jpg" alt="Image">
+                            <img id="product-image" class="w-100 h-100" src="img/product-1.jpg" alt="Image">
                         </div>
                 </div>
 
@@ -256,7 +256,7 @@
 
             <div class="col-lg-7 h-auto mb-30">
                 <div class="h-100 bg-light p-30">
-                    <h3>Product Name Goes Here</h3>
+                    <h3 id="product-name">Product Name Goes Here</h3>
 
                     <div class="d-flex mb-3">
                         <div class="text-primary mr-2">
@@ -269,9 +269,9 @@
                         <small class="pt-1">(99 Reviews)</small>
                     </div>
 
-                    <h3 class="font-weight-semi-bold mb-4">$150.00</h3>
+                    <h3 id="product-price" class="font-weight-semi-bold mb-4">$150.00</h3>
 
-                    <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit
+                    <p id="product-description" class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit
                         clita ea. Sanc ipsum et, labore clita lorem magna duo dolor no sea
                         Nonumy</p>
 
