--- a/cart.html
+++ b/cart.html
@@ -254,7 +254,7 @@
 
                     <!-- table head ended from here  -->
 
-                    <tbody class="align-middle">
+                    <tbody class="align-middle" id="cart-item-list">
 
                         <tr>
                             <td class="align-middle"><img src="img/product-1.jpg" alt="" style="width: 50px;"> Product Name</td>
@@ -299,18 +299,18 @@
                 <div class="bg-light p-30 mb-5">
                     <div class="border-bottom pb-2">
                         <div class="d-flex justify-content-between mb-3">
-                            <h6>Subtotal</h6>
-                            <h6>$150</h6>
+                            <h6>Total Price</h6>
+                            <h6  id="totalPrice">$150</h6>
                         </div>
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-medium">Shipping</h6>
-                            <h6 class="font-weight-medium">$10</h6>
+                            <h6 id="shippingCost" class="font-weight-medium">$10</h6>
                         </div>
                     </div>
                     <div class="pt-2">
                         <div class="d-flex justify-content-between mt-2">
-                            <h5>Total</h5>
-                            <h5>$160</h5>
+                            <h5>Total Pay</h5>
+                            <h5 id="finalPrice">$160</h5>
                         </div>
                         <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout</button>
                     </div>
