--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
             <!-- <img src="images/signup-bg.jpg" alt=""> -->
             <div class="container">
                 <div class="signup-content">
-                    <form method="POST" id="signup-form" class="signup-form">
+                    <form method="POST" id="signup-form" class="signup-form" onsubmit="handleLogin(event)">
                         <h2 class="form-title">Login to your account</h2>
                         
                         <div class="form-group">
@@ -48,5 +48,6 @@
     <!-- JS -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/auth.js"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
