--- a/shop.html
+++ b/shop.html
@@ -178,7 +178,7 @@
                        </a>
                        <a href="" class="btn px-0 ml-3">
                            <i class="fas fa-shopping-cart text-primary"></i>
-                           <span class="badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
+                           <span class="badge text-secondary border border-secondary rounded-circle" id="total-cart" style="padding-bottom: 2px;">0</span>
                        </a>
                    </div>
                </div>
@@ -328,7 +328,7 @@
 
             <!-- Shop Product Start -->
             <div class="col-lg-9 col-md-8" >
-                <div  id="product-list" class="row pb-3" >
+                <div  id="resturatnt-product-list" class="row pb-3" >
                     <div class="col-12 pb-1">
                         <div class="d-flex align-items-center justify-content-between mb-4">
                             <div>
