--- a/cart.html
+++ b/cart.html
@@ -283,7 +283,7 @@
                         <h5>Total Pay</h5>
                         <h5 id="finalPrice">$160</h5>
                     </div>
-                    <a class="btn btn-block btn-primary font-weight-bold my-3 py-3" href="checkout.html">Proceed To Checkout</a>
+                    <a class="btn btn-block btn-primary font-weight-bold my-3 py-3" href="checkout.html" id="checkoutBtn" onclick="checkout()">Proceed To Checkout</a>
                 </div>
             </div>
         </div>
