--- a/checkout.html
+++ b/checkout.html
@@ -379,7 +379,7 @@
                                 <label class="custom-control-label" for="banktransfer">Bank Transfer</label>
                             </div>
                         </div>
-                        <button class="btn btn-block btn-primary font-weight-bold py-3">Place Order</button>
+                        <button class="btn btn-block btn-primary font-weight-bold py-3" onclick="Payment()">Place Order</button>
                     </div>
                 </div>
             </div>
